--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-react-portfolio",
-  "homepage": "https://wintang93.github.io/my-react-portfolio",
+  "homepage": "https://wintang93.github.io/my-react-portfolio/#",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
